--- a/sass/header.scss
+++ b/sass/header.scss
@@ -25,7 +25,7 @@
     }
 
     @media (max-width: 768px) {
-      height: 90px;
+      height: 100px;
     }
   }
 }
